--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="en">
 <head>
 <meta name="viewport"
-      content="width=device=width user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-<link rel="stylesheet" href="style.css"
+      content="width=device=width user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
 </head>
 <title>Free Calculator</title>
 <body>
