--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport"
       content="width=device=width user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <link rel="stylesheet" href="style.css">
-      <script src="script.js"></script>
+      <script src="script.js">
 </head>
 <title>Free Calculator</title>
 <body>
@@ -28,6 +28,7 @@
       <button onclick="calculate()">=</button>
       <button onclick="clearDisplay()" class="operator-btn">C</button>
       <button onclick="appendToDisplay('pi')">pi</button>
+      </script>
     </div>
   </div>
 </body>
