--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <title>Free Calculator</title>
 <body>
-      <script src="script.js">
+      <script src="script.js"></script>
   <div id="calculator">
   <input id="display" readonly>
     <div id="buttons">
